# movie-recommendator

./: .gitignore  LICENSE  Pipfile  README.md  gpt_description.ipynb  pyproject.toml
api/: Dockerfile  api.py  pyproject.toml  requirements.txt  run.py  settings.toml
api/app/: api.py  test.py
api/app/database/: all_movies.csv
api/app/helper/: file.py  text.py
api/app/models/: models.py
api/app/routers/: recomendation.py  root.py
api/app/routes/: health_check.py  root.py
api/app/service/: model.py  recomendation.py
api/service/: file.py  text.py
frontend/: Dockerfile  Pipfile  env.template  pyproject.toml  requirements.txt
frontend/app/: main.py
frontend/app/cache/: session_state.py
frontend/app/models/: models.py
frontend/app/service/: movies_api.py
frontend/app/widget/: movie.py
model/: model.ipynb
